# starter-embeddedhal

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: toolchain_arm_newlib.cmake  toolchain_arm_picolibc.cmake
embeddedhal-starter/: linker.ld  main.cpp
